--- a/portfolio.html
+++ b/portfolio.html
@@ -270,6 +270,32 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscription">
+          <form action="" class="footer-form">
+            <h3 class="footer-subscription-title">підпишіться на розсилку</h3>
+            <div class="subscription-wrap">
+              <label for="email"
+                ><input
+                  type="email"
+                  name="email"
+                  placeholder="E-mail"
+                  class="subscription-input"
+                  required
+              /></label>
+              <button type="submit" class="btn-footer">
+                Підписатися<svg
+                  viewBox="0 0 100 100"
+                  width="24px"
+                  class="icon shape-codepen"
+                >
+                  <use
+                    xlink:href="./images/sprite.svg#icon-send-airplane"
+                  ></use>
+                </svg>
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
