fixed markup and stylization of forms

--- a/index.html
+++ b/index.html
@@ -569,16 +569,15 @@
         </div>
         <div class="footer-subscription">
           <form action="" class="footer-form">
-            <h3 class="footer-subscription-title">підпишіться на розсилку</h3>
+            <label for="footer-email">підпишіться на розсилку</label>
             <div class="subscription-wrap">
-              <label for="email"
-                ><input
-                  type="email"
-                  name="email"
-                  placeholder="E-mail"
-                  class="subscription-input"
-                  required
-              /></label>
+              <input
+                type="footer-email"
+                name="footer-email"
+                id="footer-email"
+                placeholder="E-mail"
+                required
+              />
               <button type="submit" class="btn-footer">
                 Підписатися<svg
                   viewBox="0 0 100 100"
@@ -652,13 +651,14 @@
               class="visually-hidden"
               required
             />
-            <div class="checkbox">
-              <svg viewBox="0 0 100 100" width="12px">
-                <use xlink:href="./images/sprite.svg#icon-tick"></use>
-              </svg>
-            </div>
-            <label for="accept"
-              >Погоджуюся з розсилкою та приймаю
+
+            <label for="accept">
+              <div class="checkbox">
+                <svg viewBox="0 0 100 100" width="12px">
+                  <use xlink:href="./images/sprite.svg#icon-tick"></use>
+                </svg>
+              </div>
+              Погоджуюся з розсилкою та приймаю
               <a href="" class="checkbox-link">Умови договору</a></label
             >
             <a href=""></a>
