--- a/portfolio.html
+++ b/portfolio.html
@@ -272,16 +272,15 @@
         </div>
         <div class="footer-subscription">
           <form action="" class="footer-form">
-            <h3 class="footer-subscription-title">підпишіться на розсилку</h3>
+            <label for="footer-email">підпишіться на розсилку</label>
             <div class="subscription-wrap">
-              <label for="email"
-                ><input
-                  type="email"
-                  name="email"
-                  placeholder="E-mail"
-                  class="subscription-input"
-                  required
-              /></label>
+              <input
+                type="footer-email"
+                name="footer-email"
+                id="footer-email"
+                placeholder="E-mail"
+                required
+              />
               <button type="submit" class="btn-footer">
                 Підписатися<svg
                   viewBox="0 0 100 100"
